--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core_desktop: ^1.0.2
   firebase_crashlytics: ^4.0.2
   package_info_plus: ^8.0.0
+  rxdart: ^0.27.5
 
 
 dev_dependencies:
