--- a/firebase/firebase.json
+++ b/firebase/firebase.json
@@ -4,6 +4,17 @@
       "target": "drive-redirect",
       "public": "redirect_webpage/public",
       "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "headers": [
+        {
+            "source": "/*.@(js)",
+            "headers": [
+                {
+                    "key": "Content-Type",
+                    "value": "application/javascript; charset=utf-8"
+                }
+            ]
+        }
+      ],
       "rewrites": [
         {
           "source": "**",
